--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="take_photo">拍照</string>
-    <string name="photo_library">图库</string>
-    <string name="select_picture">选择图片</string>
-    <string name="take_pic_need_permission">拍照需要您授予相机权限</string>
+    <string name="take_photo">Take Photo</string>
+    <string name="photo_library">Photo Library</string>
+    <string name="select_picture">Select Picture</string>
+    <string name="take_pic_need_permission">Taking pictures need you to grant camera permission</string>
 
 </resources>
